# echo1-coco-split

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
echo1_coco_split/: echo1_coco_split.py
tests/: test_echo1_coco_split.py
